[project]
name = "pm_tb_data"
version = "0.1.2"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["pm_tb_data*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
pm_tb_data = ["py.typed"]

[tool.black]
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
select = [
  "F",
  "E",
  "W",
  "C4",
  "C90",
  "I",
  "N",
  "D",
  "UP",
  "YTT",
  "B",
  "A",
  "C4",
  "T10",
  "RUF",
]

ignore = [
  # D1: Ignore errors requiring docstrings on everything.
  # D203: "1 blank line required before class docstring"
  # D213: "Multi-line docstring summary should start at the second line"
  # E731: Lambda assignments are OK, use your best judgement.
  # RUF010: !a, !r, !s are too magical for me.
  "D1", "D203", "D213", "E731", "RUF010",
]

[tool.ruff.isort]
known-first-party = ["pm_tb_data"]

[tool.ruff.mccabe]
max-complexity = 8

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.mypy]
python_version = "3.10"
packages = ["pm_tb_data"]
incremental = true
strict = false
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
check_untyped_defs = true
warn_unused_ignores = true
plugins = ["numpy.typing.mypy_plugin", ]

[[tool.mypy.overrides]]
module = [
  "requests.*",
  "earthaccess.*",
  "xarray.*",
  "netCDF4.*",
  "loguru.*",
  "rasterio.*",
]
ignore_missing_imports = true


[tool.bumpversion]
current_version = "0.1.2"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pm_tb_data/__init__.py"
search   = '__version__ = "v{current_version}"'
replace  = '__version__ = "v{new_version}"'

[[tool.bumpversion.files]]
filename = "./recipe/meta.yaml"
search = 'version: "{current_version}"'
replace = 'version: "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.vulture]
paths = ["pm_tb_data", "tests"]
# A min confidence of 60 or lower will trigger errors around functions not being
# used.
# TODO: reduce min confidence and add more tests!
min_confidence = 65
